# ConvNet

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3cf5364  Conv3D.cpp  Conv3D.h  Pooling.cpp  Pooling.h  README.md  cnn.cpp  cnn.h  full-connected.cpp  full-connected.h  image.h  layer.cpp  layer.h  main  main.cpp  neurone.cpp  neurone.h  util.h
